--- a/app/info/info.component.html
+++ b/app/info/info.component.html
@@ -1,3 +1,20 @@
-<p>
-  info works!
-</p>
+<div class="container">
+  <div class="row">
+    <div class="col s12">
+      <h1 class="red ">Sobre TakeAway</h1>
+    </div>
+  </div>
+  <div class="row">
+    <div class="col s12">
+      <p class="flow-text">Actualmente TakeAway es una empresa distribuidora de comida a domicilo. A parte nuestra tienda-restaurante se encuentra ubicada en la zona mas emplematica de nuestra ciudad. <br>
+      Nuestra tienda tiene dos zonas a diferenciar: la tienda, en la entrada del local, donde el cliente puede comprar nuestro producto que se encuentra expuestro en unas grandes vitrinas; y la zona de desgustación al fondo, con mesas, sillas y espacios amplios, en el caso que el cliente prefiera consumirlo in situ.<br> En nuestra web podras comprar los productos y establecer si deseas que te lo lleven a domicilio o recogerlos en nuestra tienda y consumirlo alli o llevartelo a casa <br> El éxito de nuestra empresa es debido al resultado de un buen trabajo. <br> Nuestro cliente encuentra en TakeAway muchos aspectos diferenciables con otros locales o empresas del mismo sector que hacen que seas un cliente habitual y que se sientas como en tu propia casa.</p>
+      <h4>En TakeAway vendemos mucho más que comida para llebar</h4>
+      <ul id="staggered-test" class="flow-text browser-default">
+        <li>Ofrecemos calidad, productos caseros 100% naturales y equilibrados</li>
+        <li>Ofrecemos productos adaptados al bolsillo de cualquier cliente</li>
+        <li>Vendemos tiempo. Todo el tiempo que el cliente gana reservando en TakeAway lo puede disfrutar en otras actividades de ocio.</li>
+        <li>Vendemos variedad. En nuestro catalogo de productos puedes encontrar una gran variedad de platos.</li>
+      </ul>
+    </div>
+  </div>
+</div>
