--- a/app/app.component.html
+++ b/app/app.component.html
@@ -1,60 +1,76 @@
 <!--Empieza la barra de navegacion-->
 <nav>
-  <div class="nav-wrapper red">
-    <a class="brand-logo titulo"><i class="fa fa-shopping-bag fa-2x" aria-hidden="true"></i>TakeAway</a>
-    <a data-activates="mobile-demo" class="button-collapse"><i class="material-icons">menu</i></a>
-    <!--Menu de barra de navegacion-->
-    <ul class="right hide-on-med-and-down">
-      <li><a [routerLink]="[ '/inicio']">Inicio</a></li>
-      <li><a [routerLink]="[ '/info']">Info</a></li>
-      <li><a [routerLink]="[ '/contacto']">Contacto</a></li>
-      <li>
-        <div *ngIf="hayLogin; else elseLogin">
-          <a class="dropdown-button" data-activates="LoginActivo">{{Login}}<i class="material-icons right">arrow_drop_down</i></a>
-          <!-- Dropdown Structure -->
-          <ul id="LoginActivo" class="dropdown-content">
-            <li>
-              <a><img src="../assets/img/utils/login.jpg" width="50%" height="50%" style="border: 5px solid red; border-radius: 50%">
-                <span
-                  style="float:right; padding-top:25%; font-size:2em">{{Login}}</span>
-              </a>
-            </li>
-            <li class="divider"></li>
-            <li><a (click)="loginEdit()"><i class="material-icons small">account_box</i>
-             Configurar Perfil</a></li>
-            <li><a (click)="desconectar();"><i class="material-icons small left">input</i>
-             Desconectar</a></li>
-          </ul>
-        </div>
-        <ng-template #elseLogin>
-          <a [routerLink]="[ '/login']"><i class="material-icons">account_circle</i></a>
-        </ng-template>
-      </li>
-      <li>
-        <div *ngIf="hayCart; else elseCart">
-          <a (click)="paintCart()"><i class="large material-icons">add_shopping_cart</i></a>
-        </div>
-        <ng-template #elseCart>
-          <a (click)="paintCart()"><i class="large material-icons">shopping_cart</i></a>
-        </ng-template>
-      </li>
-    </ul>
-    <!--Menu barra de navegacion en mobil-->
-    <ul class="side-nav" id="mobile-demo">
-      <li><a [routerLink]="[ '/inicio']"><i class="material-icons">store</i>Inicio</a></li>
-      <li><a [routerLink]="[ '/info']"><i class="material-icons">info</i>Info</a></li>
-      <li><a [routerLink]="[ '/contacto']"><i class="material-icons">contact_mail</i>Contacto</a></li>
-      <li>
-        <a [routerLink]="[ '/login']"><i class="material-icons">account_circle</i></a>
-      </li>
-      <li><a (click)="paintCart()"><i class="material-icons left">shopping_cart</i></a></li>
-    </ul>
+  <div *ngIf="hayAdmin; else elseNav">
+    <div class="nav-wrapper">
+      <a class="brand-logo titulo"><i class="fa fa-shopping-bag fa-2x" aria-hidden="true"></i>TakeAway <span style="margin-left: 50px">ADMINISTRACION</span></a>
+      <ul id="nav-mobile" class="right hide-on-med-and-down">
+        <li><a (click)="irAWeb();">WEB</a></li>
+        <li><a ><i class="material-icons large">account_balance</i></a></li>
+        <li><a ><i class="material-icons">assessment</i></a></li>
+        <li><a >Pedidos</a></li>
+        <li><a >Categorias</a></li>
+        <li><a >Producto</a></li>
+      </ul>
+    </div>
   </div>
+  <ng-template #elseNav>
+    <div class="nav-wrapper red">
+      <a class="brand-logo titulo"><i class="fa fa-shopping-bag fa-2x" aria-hidden="true"></i>TakeAway</a>
+      <a data-activates="mobile-demo" class="button-collapse"><i class="material-icons">menu</i></a>
+      <!--Menu de barra de navegacion-->
+      <ul class="right hide-on-med-and-down">
+        <li><a [routerLink]="[ '/inicio']">Inicio</a></li>
+        <li><a [routerLink]="[ '/info']">Info</a></li>
+        <li><a [routerLink]="[ '/contacto']">Contacto</a></li>
+        <li>
+          <div *ngIf="hayLogin; else elseLogin">
+            <a class="dropdown-button" data-activates="LoginActivo">{{Login}}<i class="material-icons right">arrow_drop_down</i></a>
+            <!-- Dropdown Structure -->
+            <ul id="LoginActivo" class="dropdown-content">
+              <li>
+                <a><img src="../assets/img/utils/login.jpg" width="50%" height="50%" style="border: 5px solid red; border-radius: 50%">
+                  <span style="float:right; padding-top:25%; font-size:2em">{{Login}}</span>
+                </a>
+              </li>
+              <li class="divider"></li>
+              <li><a (click)="loginInfo()"><i class="material-icons small">account_box</i>
+              Configurar Perfil</a></li>
+              <li><a (click)="desconectar();"><i class="material-icons small left">input</i>
+              Desconectar</a>
+              </li>
+            </ul>
+          </div>
+          <ng-template #elseLogin>
+            <a [routerLink]="[ '/login']"><i class="material-icons">account_circle</i></a>
+          </ng-template>
+        </li>
+        <li>
+          <div *ngIf="hayCart; else elseCart">
+            <a (click)="paintCart()"><i class="large material-icons">add_shopping_cart</i></a>
+          </div>
+          <ng-template #elseCart>
+            <a (click)="paintCart()"><i class="large material-icons">shopping_cart</i></a>
+          </ng-template>
+        </li>
+      </ul>
+      <!--Menu barra de navegacion en mobil-->
+      <ul class="side-nav" id="mobile-demo">
+        <li><a [routerLink]="[ '/inicio']"><i class="material-icons">store</i>Inicio</a></li>
+        <li><a [routerLink]="[ '/info']"><i class="material-icons">info</i>Info</a></li>
+        <li><a [routerLink]="[ '/contacto']"><i class="material-icons">contact_mail</i>Contacto</a></li>
+        <li>
+          <a [routerLink]="[ '/login']"><i class="material-icons">account_circle</i></a>
+        </li>
+        <li><a (click)="paintCart()"><i class="material-icons left">shopping_cart</i></a></li>
+      </ul>
+    </div>
+  </ng-template>
+
 </nav>
 
 <router-outlet> </router-outlet>
 
-<footer class="page-footer red">
+<footer *ngIf="!hayAdmin" class="page-footer red">
   <div class="container">
     <div class="row">
       <div class="col l6 s12">
@@ -87,9 +103,9 @@
 <!-- Modal Structure CART -->
 <div id="Cart" class="modal">
   <div class="modal-content">
-    <div *ngIf="hayCart != null; else NoHayCart">
+    <div *ngIf="hayCart; else NoHayCart">
       <h4>Lista del pedido</h4>
-      <!--<table>
+      <table class="striped">
         <thead>
           <tr>
             <th>Cantidad</th>
@@ -99,25 +115,26 @@
           </tr>
         </thead>
         <tbody>
-          <tr *ngFor="let cart of hayCart">
+          <tr *ngFor="let cart of cart">
             <td>{{cart.cantidad}}</td>
             <td>{{cart.nombre}}</td>
             <td>{{cart.precio}}</td>
             <td>{{cart.precio * cart.cantidad}}</td>
           </tr>
           <tr>
-            <td colspan="4">{{totalPrecio}}</td>
+            <td colspan="4" class="blue-text" style="font-weight:bold; text-align:right; padding-right: 40px; border:1px solid blue">TOTAL: {{totalPrecio}}</td>
           </tr>
         </tbody>
-      </table>-->
+      </table>
     </div>
     <ng-template #NoHayCart>
-      <h4>No hay producto añadidos a la compra</h4>
+      <h4>No hay productos añadidos a la compra</h4>
     </ng-template>
   </div>
   <div class="modal-footer">
-    <div *ngIf="hayCart != null; else btnform">
+    <div *ngIf="hayCart; else btnform">
       <a [routerLink]="[ '/checkout']" class="waves-effect waves-teal btn-flat red left">PASAR POR CAJA</a>
+      <a (click)="borrarCart()" class="red-text"><i class="material-icons" style="font-size:3rem;cursor:pointer;">delete_sweep</i></a>
       <a class="modal-action modal-close waves-effect waves-green btn-flat">CERRAR</a>
     </div>
     <ng-template #btnform>
@@ -126,66 +143,90 @@
   </div>
 </div>
 <!-- Modal Structure LOGINEDIT-->
-<div id="loginEdit" class="modal">
+<div id="loginEdit" class="modal" style="width:90%">
   <div class="modal-content">
-    <h4>Configurar Perfil</h4>
+    <h4 class="red white-text" style="padding:20px">Configurar Perfil</h4>
     <form #formLoginEdit="ngForm" (ngSubmit)="onSubmit()" id="formLoginEdit">
-      <div class="container">
-        <div class="row">
-          <div class="col s6">
-            <img src="/../assets/img/{{cliente.avatar}}" class="responsive-img" />
-          </div>-->
-          <!--campo Nombre de usuario-->
-          <div class="col s6">
-            <h3>{{cliente.nombre}}</h3>
+      <div class="row">
+        <div class="col s6">
+          <div class="row">
+            <div class="col s12">
+              <img src="../assets/img/utils/{{cliente.avatar}}" width="50%" height="50%" style="border: 5px solid black; border-radius: 50%"
+                class="responsive-img" />
+              <div class="row">
+                <div class="col s6">
+                  <div class="file-field input-field">
+                    <div class="btn black">
+                      <span>Editar Avatar</span>
+                      <input type="file">
+                    </div>
+                  </div>
+                </div>
+                <div class="col s6">
+                  <h3>{{cliente.nombre}}</h3>
+                </div>
+              </div>
+              <div class="row">
+                <div class="col s12">
+                  <div class="divider" style="margin-top:20px"></div>
+                </div>
+              </div>
+            </div>
           </div>
-        </div>
-        <!--campo Contraseña-->
-        <div class="row">
-          <div class="col s12">
-            <div class="input-field">
-              <i class=" medium material-icons prefix">vpn_key</i>
-              <input id="password" name="password" type="password" class="validate" [(ngModel)]="cliente.password" ngModel>
-              <label for="password" data-error="error" data-success="correcto">Contraseña</label>
+          <!--campo Contraseña-->
+          <div class="row">
+            <div class="col s8 offset-s2">
+              <div class="input-field">
+                <i class=" medium material-icons prefix">vpn_key</i>
+                <input id="password" name="password" type="text" class="validate" [(ngModel)]="cliente.password" ngModel>
+                <label [class.active]="cliente.password" for="password" data-error="error" data-success="correcto">Contraseña</label>
+              </div>
             </div>
           </div>
         </div>
-        <!--campo email-->
-        <div class="row">
-          <div class="input-field col s12">
-            <i class="medium material-icons prefix">email</i>
-            <input id="email" type="email" name="email" class="validate" [(ngModel)]="cliente.email" ngModel>
-            <label for="email" data-error="error" data-success="correcto">Email</label>
+        <div class="col s6">
+          <div class="row">
+            <div class="col s12">
+              <h4 class="red white-text">Datos Personales</h4>
+            </div>
           </div>
-        </div>
-        <!--campo direccion-->
-        <div class="row">
-          <div class="input-field col s12">
-            <input id="direccion" type="text" name="direccion" [(ngModel)]="cliente.direccion" ngModel>
-            <label for="direccion">Direccion   <span class="grey-text" style="font-size:11px;">c/Av/psg/ Nombre de la calle, numero , piso/casa - puerta. POBLACION </span></label>
+          <!--campo email-->
+          <div class="row">
+            <div class="input-field col s12">
+              <i class="medium material-icons prefix">email</i>
+              <input id="email" type="email" name="email" class="validate" [(ngModel)]="cliente.email" ngModel>
+              <label [class.active]="cliente.email" for="email" data-error="error" data-success="correcto">Email</label>
+            </div>
           </div>
-        </div>
-        <!--campo Telefono-->
-        <div class="row">
-          <div class="input-field col s6">
-            <i class="material-icons prefix">phone</i>
-            <input id="telf" type="text" name="telf" pattern="^[9|8|7|6]\d{8}$" title="Su telefono debe de empezar por 9 o 6" class="validate"
-              [(ngModel)]="cliente.telf" ngModel>
-            <label for="telf" data-error="error" data-success="correcto">Telefono</label>
+          <!--campo direccion-->
+          <div class="row">
+            <div class="input-field col s12">
+              <input id="direccion" type="text" name="direccion" [(ngModel)]="cliente.direccion" ngModel>
+              <label [class.active]="cliente.direccion" for="direccion">Direccion   <span class="grey-text" style="font-size:11px;">c/Av/psg/ Nombre de la calle, numero , piso/casa - puerta. POBLACION </span></label>
+            </div>
           </div>
-          <!--campo Codigo Postal-->
-          <div class="col s6">
-            <div class="input-field">
-              <input id="cp" name="cp" type="text" [(ngModel)]="cliente.cp" ngModel>
-              <label for="cp">Codigo Postal</label>
+          <!--campo Telefono-->
+          <div class="row">
+            <div class="input-field col s6">
+              <i class="material-icons prefix">phone</i>
+              <input id="telf" type="text" name="telf" pattern="^[9|8|7|6]\d{8}$" title="Su telefono debe de empezar por 9 o 6" class="validate"
+                [(ngModel)]="cliente.telf" ngModel>
+              <label [class.active]="cliente.telf" for="telf" data-error="error" data-success="correcto">Telefono</label>
+            </div>
+            <!--campo Codigo Postal-->
+            <div class="col s6">
+              <div class="input-field">
+                <input id="cp" name="cp" type="text" [(ngModel)]="cliente.cp" ngModel>
+                <label [class.active]="cliente.cp" for="cp">Codigo Postal</label>
+              </div>
             </div>
           </div>
         </div>
-        <button style="margin: 20px;" class="btn waves-effect waves-light red" type="submit" name="action">Enviar</button>
       </div>
     </form>
   </div>
   <div class="modal-footer">
-    <a class="modal-action modal-close waves-effect waves-green btn-flat">Cancelar</a>
+    <button style="margin: 20px;" class="btn waves-effect waves-light red left" type="submit" name="action">Enviar</button>
+    <a class="modal-action modal-close waves-effect waves-green btn-flat black white-text">Cancelar</a>
   </div>
 </div>
